--- a/WarehouseAPI/src/main/resources/templates/sale/detail.html
+++ b/WarehouseAPI/src/main/resources/templates/sale/detail.html
@@ -266,7 +266,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                                     'Sale order has been completed',
                                                     'success'
                                                 ).then(function(){
-                                                    window.location.href="/save";
+                                                    window.location.href="/sale/browse";
                                                 });  
                                                }
                                            }
