--- a/WarehouseAPI/src/main/resources/templates/home/index.html
+++ b/WarehouseAPI/src/main/resources/templates/home/index.html
@@ -236,7 +236,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <h6 class="m-0 font-weight-bold text-primary">Nearly transacions</h6>
                         </div>
                         <div class="card-body">
-                            <table class="table table-bordered" id="tblTrans" width="100%" cellspacing="0">
+                            <table class="table table-bordered" id="tblTrans" width="100%" cellspacing="0" data-order='[[ 0, "desc" ]]' data-page-length='10'>
                                 <thead>
                                     <tr>
                                         <th>No</th>
