--- a/WarehouseAPI/src/main/resources/templates/goods/create2.html
+++ b/WarehouseAPI/src/main/resources/templates/goods/create2.html
@@ -32,7 +32,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 </div>
                 <div class="form-group">
                     <label>Price</label>
-                    <input type="number" class="form-control" th:field="*{price}"  placeholder="Enter Price" required>
+                    <input type="number" class="form-control" th:field="*{price}" min="1"  placeholder="Enter Price" required>
                 </div>
                 <div class="form-group">
                     <label>Package</label>
@@ -40,7 +40,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 </div>
                 <div class="form-group">
                     <label>Qty/Package</label>
-                    <input type="number" class="form-control" th:field="*{qty_per_package}"  placeholder="Enter Qty/Package" required>
+                    <input type="number" class="form-control" th:field="*{qty_per_package}" min="1"  placeholder="Enter Qty/Package" required>
                 </div>
                 
                 <div class="form-check">
