--- a/WarehouseAPI/src/main/resources/templates/customer/index.html
+++ b/WarehouseAPI/src/main/resources/templates/customer/index.html
@@ -20,10 +20,10 @@
                     </button>
                 </div>
                 <div class="card-header py-3">
-                    <h5 th:if="${message}" class="alert alert-success" th:text="${message}"></h5>
-                    <h5 th:if="${message1}" class="alert alert-danger" th:text="${message1}"></h5>
-                    <h5 th:if="${message2}" class="alert alert-danger" th:text="${message2}"></h5>
-                    <form th:action="@{/api/customers/import}" method="post" enctype="multipart/form-data">
+                    <div th:if="${message}">
+                        <input type="hidden" th:value="${message}" id="excel">
+                    </div>
+                    <form th:action="@{/customer/import}" method="post" enctype="multipart/form-data">
 <!--                        <input type="file" th:name="file" />
 
                         <button  class="btn btn-primary" id="btnShow">
@@ -42,7 +42,15 @@
                     </form>
                 </div>
                 <div class="card-header py-3">
-                    <a th:href="@{/api/customers/export}">Export to Excel</a>
+                    <a th:href="@{/api/customers/export}">
+                        <button  class="btn btn-primary" id="btnShow">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+                                <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+                                <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+                            </svg>
+                            <span>&nbsp;</span>Export to Excel
+                        </button>
+                    </a>
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
@@ -245,6 +253,27 @@
                     $('#btnShow').click(function () {
                         $('#exampleModal').modal('show');
                     });
+                    
+                    if ($('#excel').val().match('Upload')){
+                        Swal.fire(
+                                'Good job!',
+                                $('#excel').val(),
+                                'success'
+                                );
+                    } else if ($('#excel').val().match('Could')) {
+                        Swal.fire(
+                                'Oh no!',
+                                $('#excel').val(),
+                                'error'
+                                );
+                    } else if ($('#excel').val().match('Please')) {
+                        Swal.fire(
+                                'Oh no!',
+                                $('#excel').val(),
+                                'error'
+                                );
+                    }
+                    
                     $('#btnAdd').click(function () {
                         const customer = {
                             cust_code: $('#cust_code').val(),
