--- a/WarehouseAPI/src/main/resources/templates/transaction/index.html
+++ b/WarehouseAPI/src/main/resources/templates/transaction/index.html
@@ -22,6 +22,17 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <div class="card-header py-3">
       <h3 class="card-title">Transaction Report</h3>
     </div>
+      <div class="card-header py-3">
+                    <a th:href="@{/api/transaction/export}">
+                        <button  class="btn btn-primary" id="btnShow">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+                                <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+                                <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+                            </svg>
+                            <span>&nbsp;</span>Export to Excel
+                        </button>
+                    </a>
+                </div>
     <div class="card-body">
       <div class="table-responsive">
         <table class="table table-bordered" id="tblWh" width="100%" cellspacing="0"  data-order='[[ 0, "desc" ]]' data-page-length='10'>
