--- a/WarehouseAPI/src/main/resources/templates/layout/layout.html
+++ b/WarehouseAPI/src/main/resources/templates/layout/layout.html
@@ -35,7 +35,7 @@
         <div id="wrapper">
 
             <!-- Sidebar -->
-            <ul class="nav nav-pills nav-sidebar flex-column bg-gradient-primary sidebar sidebar-dark" id="accordionSidebar" ata-widget="treeview" role="menu" data-accordion="false">
+            <ul class="nav nav-pills nav-sidebar flex-column bg-gradient-primary sidebar sidebar-dark" id="accordionSidebar" ata-widget="treeview" role="menu" data-accordion="false" >
 
                 <!-- Sidebar - Brand -->
                 <a class="sidebar-brand d-flex align-items-center justify-content-center" th:href="@{/}">
@@ -506,7 +506,7 @@
                   if(res===400){
                     Swal.fire({
                     icon: 'warning',
-                    title: 'Oops...',
+                    title: 'You don`t have any worksapce yet!',
                     html: '<b>Selected your workspace first !</b>',
                     button: "Select workspace"
                 }).then(function(){
