--- a/WarehouseAPI/src/main/resources/templates/locs/index.html
+++ b/WarehouseAPI/src/main/resources/templates/locs/index.html
@@ -30,7 +30,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <thead>
                                 <tr>
                                     <th>Location code</th>
-                                    <th>Description</th>
+                                    <th>Location name</th>
                                     <th>Loc Type</th>
                                     <th>Loc Capacity</th>
                                     <th>Loc Remain</th>
@@ -78,7 +78,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                     <input id="loc_code" class="form-control"/> 
                                 </div>
                                 <div class="form-group col-8">
-                                    <label for="wh_desc">Description</label>
+                                    <label for="wh_desc">Location name</label>
                                     <input id="loc_desc" class="form-control"/> 
                                 </div>
                             </div>
@@ -132,7 +132,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                 <input type="hidden" id="loc_editOutgo" class="form-control" readonly/>
                                 <input type="hidden" id="wh_editCode" class="form-control" readonly/>
                                 <div class="form-group col-8">
-                                    <label for="loc_editDesc">Description</label>
+                                    <label for="loc_editDesc">Location name</label>
                                     <input id="loc_editDesc" class="form-control"/> 
                                 </div>
                                 <div class="form-group col-4">
