--- a/WarehouseAPI/src/main/resources/templates/warehouse/index.html
+++ b/WarehouseAPI/src/main/resources/templates/warehouse/index.html
@@ -74,13 +74,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <div class="row">
                                 <div class="form-group col-12">
                                     <label for="wh_cmt">Comment</label>
-                                    <textarea class="form-control" id="wh_cmt">
-                                        
-                                    </textarea>
+                                    <textarea class="form-control" id="wh_cmt"></textarea>
                                 </div>
                             </div>
                              <b ><i>Fields marked with * are required.</i></b>
-
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
