--- a/WarehouseAPI/src/main/resources/templates/supplier/index.html
+++ b/WarehouseAPI/src/main/resources/templates/supplier/index.html
@@ -103,41 +103,37 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         </div>
                         <div class="modal-body">
                             <div class="row">
-                                <div class="form-group col-4">
-                                    <label for="sup_code">Supplier Code(*)</label>
+                                <div class="form-group col-6">
+                                    <label for="sup_code">Supplier Code *</label>
                                     <input id="sup_code" class="form-control"/> 
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="form-group col-8">
-                                    <label for="sup_name">Supplier Name(*)</label>
+                                <div class="form-group col-6">
+                                    <label for="sup_name">Supplier Name *</label>
                                     <input id="sup_name" class="form-control"/> 
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="form-group col-8">
-                                    <label for="sup_address">Address(*)</label>
+                                <div class="form-group col-6">
+                                    <label for="sup_address">Address *</label>
                                     <input id="sup_address" class="form-control"/> 
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="form-group col-8">
+                                <div class="form-group col-6">
                                     <label for="sup_email">Email</label>
                                     <input id="sup_email" class="form-control"/> 
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="form-group col-8">
+                                <div class="form-group col-6">
                                     <label for="city">City</label>
                                     <input id="city" class="form-control"/> 
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="form-group col-8">
+                                <div class="form-group col-6">
                                     <label for="tax_code">Tax Code</label>
                                     <input id="tax_code" class="form-control"/> 
                                 </div>
                             </div>
+                            <b ><i>Fields marked with * are required.</i></b>
+
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -246,10 +242,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             Swal.fire({
                                             icon: 'error',
                                             title: 'Oops...',
-                                            text: 'Please input driver'
+                                            text: 'Please input address'
                                         });
                             return false;
                         }  
+                        
                         return true;
                     };
                     
@@ -285,6 +282,12 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                             window.location.reload();
                                         });
                                     }
+                                    if (res===501){
+                                    Swal.fire('Ooobs','This supplier code has been created before','error').then(function(){
+                                        window.location.reload();
+                                    });
+                                }
+                                
                                 }
                             });
                             console.log(supplier);
