--- a/WarehouseAPI/src/main/resources/templates/customer/index.html
+++ b/WarehouseAPI/src/main/resources/templates/customer/index.html
@@ -324,7 +324,7 @@
                                     });
                                 }
                                 if (res===500){
-                                    Swal.fire('Ooobs','All fields must not be blank!','error').then(function(){
+                                    Swal.fire('Ooobs','Required fields must not be blank!','error').then(function(){
                                         window.location.reload();
                                     });
                                 }
