--- a/WarehouseAPI/src/main/resources/templates/customer/index.html
+++ b/WarehouseAPI/src/main/resources/templates/customer/index.html
@@ -319,12 +319,12 @@
                                     });
                                 }
                                 if (res===501){
-                                    Swal.fire('Ooobs','This customer code has been created before','error').then(function(){
+                                    Swal.fire('Ooops','This customer code has been created before','error').then(function(){
                                         window.location.reload();
                                     });
                                 }
                                 if (res===500){
-                                    Swal.fire('Ooobs','Required fields must not be blank!','error').then(function(){
+                                    Swal.fire('Ooops','Required fields must not be blank!','error').then(function(){
                                         window.location.reload();
                                     });
                                 }
