--- a/WarehouseAPI/src/main/resources/templates/transaction/index.html
+++ b/WarehouseAPI/src/main/resources/templates/transaction/index.html
@@ -5,91 +5,91 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 -->
 <html xlmns:th="http://www.thymeleaf.org" xlmns:layout="http://www.ultrag.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/layout}">
-<head>
-  <title>Transaction</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-<div class="container-fluid" layout:fragment="contents">
+    <head>
+        <title>Transaction</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+        <div class="container-fluid" layout:fragment="contents">
 
-  <!-- Page Heading -->
-  <h1 class="h3 mb-2 text-gray-800">Transaction</h1>
+            <!-- Page Heading -->
+            <h1 class="h3 mb-2 text-gray-800">Transaction</h1>
 
 
-  <!-- DataTales Example -->
-  <div class="card shadow mb-4">
-    <div class="card-header py-3">
-      <h3 class="card-title">Transaction Report</h3>
-    </div>
-      <div class="card-header py-3">
-                    <a th:href="@{/api/transaction/export}">
-                        <button  class="btn btn-primary" id="btnShow">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
-                                <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
-                                <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
-                            </svg>
-                            <span>&nbsp;</span>Export to Excel
-                        </button>
-                    </a>
+            <!-- DataTales Example -->
+            <div class="card shadow mb-4">
+                <div class="card-header py-3">
+                    <h3 class="card-title">Transaction Report</h3>
                 </div>
-    <div class="card-body">
-      <div class="table-responsive">
-        <table class="table table-bordered" id="tblWh" width="100%" cellspacing="0"  data-order='[[ 0, "desc" ]]' data-page-length='10'>
-          <thead>
-          <tr>
-            <th>No</th>
-            <th>Type</th>
-            <th>Goods Name</th>
-            <th>From</th>
-            <th>To</th>
-            <th>Quantity</th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr th:each="item: ${trans}">
-            <td th:text="${item.id}">Id</td>
+                <div class="card-header py-3">
+                    <button onclick="ExportToExcel('xlsx','Transactions.xlsx')" class="btn btn-primary">Export to Excel</button>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table table-bordered" id="tblWh" width="100%" cellspacing="0"  data-order='[[ 0, "desc" ]]' data-page-length='10'>
+                            <thead>
+                                <tr>
+                                    <th>No</th>
+                                    <th>Type</th>
+                                    <th>Goods Name</th>
+                                    <th>From</th>
+                                    <th>To</th>
+                                    <th>Quantity</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr th:each="item: ${trans}">
+                                    <td th:text="${item.id}">Id</td>
 
-            <div th:if="${item.type.equals('in')}">
-              <td><span class="badge badge-warning">Allocate</span></td>
-          </div>
-            <div th:if="${item.type.equals('out')}">
-              <td><span class="badge badge-success">Issue</span></td>
-            </div>
-             <div th:if="${item.type.equals('unqualified')}">
-              <td><span class="badge badge-danger">Unqualified</span></td>
-            </div>
-            <div th:if="${item.type.equals('Recycle')}">
-              <td><span class="badge badge-primary">Recycle</span></td>
-            </div>
-            <div th:if="${item.type.equals('Disposed')}">
-              <td><span class="badge badge-danger">Disposed</span></td>
+                            <div th:if="${item.type.equals('in')}">
+                                <td><span class="badge badge-warning">Allocate</span></td>
+                            </div>
+                            <div th:if="${item.type.equals('out')}">
+                                <td><span class="badge badge-success">Issue</span></td>
+                            </div>
+                            <div th:if="${item.type.equals('unqualified')}">
+                                <td><span class="badge badge-danger">Unqualified</span></td>
+                            </div>
+                            <div th:if="${item.type.equals('Recycle')}">
+                                <td><span class="badge badge-primary">Recycle</span></td>
+                            </div>
+                            <div th:if="${item.type.equals('Disposed')}">
+                                <td><span class="badge badge-danger">Disposed</span></td>
+                            </div>
+
+                            <td th:text="${item.goods_name}">Goods Name</td>
+                            <td th:text="${item.from_loc}">From Location</td>
+                            <td th:text="${item.to_loc}">To Location</td>
+                            <td th:text="${item.quantity}">Quantity</td>
+
+
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
 
-            <td th:text="${item.goods_name}">Goods Name</td>
-            <td th:text="${item.from_loc}">From Location</td>
-            <td th:text="${item.to_loc}">To Location</td>
-            <td th:text="${item.quantity}">Quantity</td>
-
-
-          </tr>
-          </tbody>
-        </table>
-      </div>
+            <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+            <script th:src="@{/vendor/datatables/jquery.dataTables.min.js}"></script>
+            <script th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}"></script>
+            <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+            <script type="text/javascript" src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
+            <script>
+                        function ExportToExcel(type, fn, dl) {
+                            var elt = document.getElementById('tblWh');
+                            var wb = XLSX.utils.table_to_book(elt, {sheet: "sheet1"});
+                            return dl ?
+                                    XLSX.write(wb, {bookType: type, bookSST: true, type: 'base64'}) :
+                                    XLSX.writeFile(wb, fn || ('Transaction_report.' + (type || 'xlsx')));
+                        }
+                        $(document).ready(function () {
+                            $('.nav-trans').addClass('active');
+                            $('#tblWh').dataTable();
+                        });
+            </script>
+        </div>
     </div>
-  </div>
-
-  <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
-  <script th:src="@{/vendor/datatables/jquery.dataTables.min.js}"></script>
-  <script th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}"></script>
-  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script>
-    $(document).ready(function () {
-      $('.nav-trans').addClass('active');
-      $('#tblWh').dataTable();
-    });
-  </script>
-</div>
-</div>
 </body>
 </html>
