--- a/WarehouseAPI/src/main/resources/templates/qc/index.html
+++ b/WarehouseAPI/src/main/resources/templates/qc/index.html
@@ -24,7 +24,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
-                        <table class="table table-bordered" id="tblWh" width="100%" cellspacing="0">
+                        <table class="table table-bordered" id="tblWh" width="100%" cellspacing="0" data-order='[[ 0, "desc" ]]' data-page-length='10'>
                             <thead>
                                 <tr>
                                     <th>Incoming Id</th>
