--- a/WarehouseAPI/src/main/resources/templates/user/profile.html
+++ b/WarehouseAPI/src/main/resources/templates/user/profile.html
@@ -18,7 +18,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <h5 th:if="${message}" class="alert alert-success" th:text="${message}"></h5>
             <h5 th:if="${alert}" class="alert alert-danger" th:text="${alert}"></h5>
             <form th:action="@{/user/save-profile}" method="post" th:object="${user}" 
-                  oninput='confirm_password.setCustomValidity(confirm_password.value != password.value ? "Passwords do not match." : "")'>
+                  oninput='confirm_password.setCustomValidity(confirm_password.value != password.value ? "Passwords do not match." : "")'
+                  onsubmit="return confirmForm()">
                 <input type="hidden" th:field="*{id}">
                 <div class="form-group">
                     <label>Username</label>
@@ -47,7 +48,23 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             </form>
             </div>
         <script>
-            
+            function confirmForm(){
+                  Swal.fire({
+                        title: 'Do you want to save change?',
+                        showDenyButton: true,
+                        showCancelButton: false,
+                        confirmButtonText: 'Yes',
+                        denyButtonText: `No`
+                    }).then((result) => {
+                        /* Read more about isConfirmed, isDenied below */
+                        if (result.isConfirmed) {
+                             return true;
+
+                        }else{
+                            return false;
+                        };
+                    });
+            }
         </script>
             <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
             <script th:src="@{/vendor/datatables/jquery.dataTables.min.js}"></script>
